@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1.1.1 2004/07/31 11:24:08 jdolecek Exp $
+$NetBSD: distinfo,v 1.2 2004/08/07 13:34:09 jdolecek Exp $
 
-SHA1 (suse91/i586/libpng-1.2.5-182.i586.rpm) = ddbe1fa95df37a5980c1a74c29cdf85963fcce2f
-Size (suse91/i586/libpng-1.2.5-182.i586.rpm) = 175204 bytes
+SHA1 (suse91/i586/libpng-1.2.5-182.7.i586.rpm) = 9a3c3425dc11c1805f23ce3bd5a76b369e4eea49
+Size (suse91/i586/libpng-1.2.5-182.7.i586.rpm) = 175528 bytes
